--- a/Solis__Project__1/assets/css/_first.scss
+++ b/Solis__Project__1/assets/css/_first.scss
@@ -68,5 +68,13 @@
 				@include backgroundColor($darkAccent);
 			}
 		}
+
+		&:active {
+			@include color($colorError);
+
+			& > .first__link--text::before {
+				@include backgroundColor($colorError);
+			}
+		}
 	}
 }
