--- a/Solis__Project__1/assets/css/_header.scss
+++ b/Solis__Project__1/assets/css/_header.scss
@@ -75,5 +75,13 @@
 		&:hover::after {
 			width: 100%;
 		}
+
+		&:active {
+			@include color($colorError);
+		}
+
+		&:focus {
+			@include color($darkAccent);
+		}
 	}
 }
