--- a/Solis__Project__1/assets/css/_promises.scss
+++ b/Solis__Project__1/assets/css/_promises.scss
@@ -119,7 +119,7 @@
 		padding: 3.3rem 8.9rem;
 		border: 1px solid $darkBorder;
 
-		transition: all 0.5s ease-in-out;
+		transition: all 0.3s ease-in-out;
 
 		@media screen and (max-width: $desktop) {
 			padding: dinamic-desktop(33px) dinamic-desktop(89px);
@@ -154,6 +154,15 @@
 
 			& > .promises__list-link--text::before {
 				@include backgroundColor($darkAccent);
+			}
+		}
+
+		&:active {
+			border-color: $colorError;
+			@include color($colorError);
+
+			& > .promises__list-link--text::before {
+				@include backgroundColor($colorError);
 			}
 		}
 	}
