--- a/Solis__Project__2/assets/css/_background.scss
+++ b/Solis__Project__2/assets/css/_background.scss
@@ -1,6 +1,6 @@
 .body {
-	@include backgroundColor($darkBackground);
 	&__all {
+		@include backgroundColor($darkBackground);
 		padding-top: 3rem;
 
 		@media screen and (max-width: $desktop) {
@@ -14,7 +14,7 @@
 
 	&__background-wrapper {
 		position: absolute;
-		z-index: -1;
+		//z-index: ;
 		max-width: 100vw;
 
 		top: 0;
@@ -33,7 +33,7 @@
 				width: 100%;
 				height: 57vw;
 
-				top: 32vw;
+				top: 29vw;
 
 				background: linear-gradient(
 					183.11deg,
@@ -54,7 +54,7 @@
 				width: 100%;
 				height: 51vw;
 
-				top: 30vw;
+				top: 29vw;
 
 				background: linear-gradient(
 					183.11deg,
