--- a/Solis__Project__1/assets/css/_variables.scss
+++ b/Solis__Project__1/assets/css/_variables.scss
@@ -30,7 +30,7 @@ $darkHeaderMenu: $white;
 $darkText: $white;
 $darkAccent: $blue;
 $darkLink: $green-neon;
-$darkLink-hover: #02e0ab;
+$darkLink-hover: $green-neonDark;
 $darkBorder: $grayDark;
 
 /* common */
