--- a/Solis__Project__1/assets/css/_background.scss
+++ b/Solis__Project__1/assets/css/_background.scss
@@ -25,7 +25,7 @@
 		&--light {
 			transform: scale(0);
 
-			&::after {
+			&::before {
 				content: '';
 
 				position: absolute;
@@ -33,7 +33,7 @@
 				width: 100%;
 				height: 57vw;
 
-				top: 32vw;
+				top: 30vw;
 
 				background: linear-gradient(
 					183.11deg,
@@ -67,5 +67,6 @@
 
 	&__background-img {
 		width: 100%;
+		height: auto;
 	}
 }
