--- a/Solis__Project__1/assets/css/_promises.scss
+++ b/Solis__Project__1/assets/css/_promises.scss
@@ -36,6 +36,8 @@
 
 	&__img {
 		max-width: 100%;
+		height: unset;
+		width: 100%;
 
 		@media screen and (max-width: $desktop) {
 			max-width: dinamic-desktop(1170px);
