--- a/Solis__Project__1/assets/css/style.css
+++ b/Solis__Project__1/assets/css/style.css
@@ -954,12 +954,12 @@ html {
 .body__background-wrapper--light {
   transform: scale(0);
 }
-.body__background-wrapper--light::after {
+.body__background-wrapper--light::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 57vw;
-  top: 32vw;
+  top: 30vw;
   background: linear-gradient(183.11deg, rgba(255, 255, 255, 0) 46.73%, #ffffff 63.21%);
 }
 .body__background-wrapper--dark {
@@ -975,6 +975,7 @@ html {
 }
 .body__background-img {
   width: 100%;
+  height: auto;
 }
 
 .header__background {
@@ -1045,6 +1046,38 @@ html {
   color: #bc3f3f;
 }
 .header__burger-menu:focus {
+  color: #689ff2;
+}
+.header__theme {
+  cursor: pointer;
+  position: relative;
+  margin-right: 1rem;
+  text-transform: uppercase;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 171%;
+  letter-spacing: 0.08em;
+  color: #ffffff;
+}
+.header__theme::after {
+  position: absolute;
+  content: "";
+  top: 100%;
+  right: 0;
+  height: 3px;
+  width: 0;
+  background: linear-gradient(96.73deg, #53f3cd 6.73%, rgba(83, 243, 205, 0) 116.9%);
+  opacity: 0.3;
+  transition: all 0.3s ease-in-out;
+}
+.header__theme:hover::after {
+  width: 100%;
+}
+.header__theme:active {
+  color: #bc3f3f;
+}
+.header__theme:focus {
   color: #689ff2;
 }
 
@@ -1199,6 +1232,8 @@ html {
 }
 .info__img {
   max-width: 100%;
+  width: 100%;
+  height: unset;
 }
 @media screen and (max-width: 1439px) {
   .info__img {
@@ -1494,6 +1529,8 @@ html {
   background: linear-gradient(0deg, rgba(25, 28, 41, 0.84), rgba(25, 28, 41, 0.84));
 }
 .quote__img {
+  width: unset;
+  height: unset;
   max-height: 100%;
   -o-object-fit: fill;
      object-fit: fill;
@@ -1780,6 +1817,8 @@ html {
 }
 .promises__img {
   max-width: 100%;
+  height: unset;
+  width: 100%;
 }
 @media screen and (max-width: 1439px) {
   .promises__img {
@@ -2004,6 +2043,7 @@ html {
 }
 .reviews__item-img {
   width: 100%;
+  height: unset;
 }
 .reviews__item-text-wrapper {
   position: absolute;
@@ -2288,4 +2328,355 @@ html {
   display: flex;
   align-items: center;
   gap: 3.2rem;
+}
+
+.body-theme__input {
+  display: none;
+}
+
+.body:has(.body-theme__input:checked) {
+  /* background */
+  background-color: #ffffff;
+  /* header */
+  /* first */
+  /* info */
+  /* benefits */
+  /* quote */
+  /* video */
+  /* promises */
+  /* reviews */
+  /* contact */
+  /* footer */
+}
+.body:has(.body-theme__input:checked) .body__background-wrapper--light {
+  transform: scale(1);
+}
+.body:has(.body-theme__input:checked) .body__background-wrapper--dark {
+  transform: scale(0);
+}
+.body:has(.body-theme__input:checked) .header__burger-menu {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .header__burger-menu::after {
+  background: #f1897b;
+  width: 100%;
+  transform: scale(0);
+}
+.body:has(.body-theme__input:checked) .header__burger-menu:hover::after {
+  transform: scale(1);
+}
+.body:has(.body-theme__input:checked) .header__burger-menu:active {
+  color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .header__burger-menu:focus {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .header__theme {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .header__theme::after {
+  background: #f1897b;
+  width: 100%;
+  transform: scale(0);
+}
+.body:has(.body-theme__input:checked) .header__theme:hover::after {
+  transform: scale(1);
+}
+.body:has(.body-theme__input:checked) .header__theme:active {
+  color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .header__theme:focus {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .menu__item::after {
+  background: #f1897b;
+  width: 100%;
+  transform: scale(0);
+}
+.body:has(.body-theme__input:checked) .menu__item:hover::after {
+  transform: scale(1);
+}
+.body:has(.body-theme__input:checked) .menu__item:active > .menu__link {
+  color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .menu__link {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .menu__link:focus {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .burger__item::after {
+  background: #f1897b;
+  width: 100%;
+  transform: scale(0);
+}
+.body:has(.body-theme__input:checked) .burger__item:hover::after {
+  transform: scale(1);
+}
+.body:has(.body-theme__input:checked) .burger__item:active > .burger__link {
+  color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .burger__link {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .burger__link:focus {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .first__title {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .first__title--strong {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .first__text {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .first__link {
+  color: #f1897b;
+}
+.body:has(.body-theme__input:checked) .first__link--text::before {
+  background-color: #f1897b;
+}
+.body:has(.body-theme__input:checked) .first__link:hover {
+  color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .first__link:hover > .first__link--text::before {
+  background-color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .first__link:focus {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .first__link:focus > .first__link--text::before {
+  background-color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .first__link:active {
+  color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .first__link:active > .first__link--text::before {
+  background-color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .info__img-wrapper::after {
+  background: unset;
+}
+.body:has(.body-theme__input:checked) .info__content {
+  background-color: #ffffff;
+}
+.body:has(.body-theme__input:checked) .info__statistic-title {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .info__statistic-title--icon {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .info__statistic-descr {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .info__statistic-divider {
+  background-color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .info__descr-text {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .info__descr-link {
+  color: #f1897b;
+}
+.body:has(.body-theme__input:checked) .info__descr-link--text::before {
+  background-color: #f1897b;
+}
+.body:has(.body-theme__input:checked) .info__descr-link:hover {
+  color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .info__descr-link:hover > .info__descr-link--text::before {
+  background-color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .info__descr-link:focus {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .info__descr-link:focus > .info__descr-link--text::before {
+  background-color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .info__descr-link:active {
+  color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .info__descr-link:active > .info__descr-link--text::before {
+  background-color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .benefits__item {
+  border-top: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .benefits__title {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .benefits__title--strong {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .benefits__descr {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .quote__img-wrapper::after {
+  background: unset;
+}
+.body:has(.body-theme__input:checked) .quote__text::before {
+  content: url(../img/iconLight.png);
+  position: absolute;
+  top: -3rem;
+  left: -6rem;
+}
+.body:has(.body-theme__input:checked) .video__title {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .video__title--strong {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .video__descr {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .video__content {
+  border: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .video__content-little {
+  border: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .video__content-big {
+  border: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .video__content-frame-wrapper {
+  border: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .video__content-saver {
+  border: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .video__content-saver::before {
+  background-color: #586291;
+}
+.body:has(.body-theme__input:checked) .video__content-saver::after {
+  border-left: 4rem solid #262a3f;
+}
+.body:has(.body-theme__input:checked) .video__content-img {
+  background-color: #ffffff;
+}
+.body:has(.body-theme__input:checked) .promises__img-wrapper::after {
+  background: unset;
+}
+.body:has(.body-theme__input:checked) .promises__content {
+  background-color: #ffffff;
+}
+.body:has(.body-theme__input:checked) .promises__list-title {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .promises__list-descr {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .promises__list-link {
+  color: #f1897b;
+  border: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .promises__list-link--text::before {
+  background-color: #f1897b;
+}
+.body:has(.body-theme__input:checked) .promises__list-link:hover {
+  border-color: #e64f3a;
+  color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .promises__list-link:hover > .promises__list-link--text::before {
+  background-color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .promises__list-link:focus {
+  border-color: #85bbb1;
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .promises__list-link:focus > .promises__list-link--text::before {
+  background-color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .promises__list-link:active {
+  border-color: #bc3f3f;
+  color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .promises__list-link:active > .promises__list-link--text::before {
+  background-color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .reviews__title {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .reviews__title--strong {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .reviews__descr {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .contact__wrapper {
+  border-top: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .contact__title {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .contact__title--strong {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .contact__descr {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .contact__input {
+  color: #262a3f;
+  background-color: #ffffff;
+  border-bottom: 1px solid #262a3f;
+}
+.body:has(.body-theme__input:checked) .contact__input:focus {
+  border-color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .contact__input::-moz-placeholder {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .contact__input:-ms-input-placeholder {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .contact__input::placeholder {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .contact__input--email:focus:invalid {
+  border-color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .contact__btn {
+  background-color: #ffffff;
+}
+.body:has(.body-theme__input:checked) .contact__btn:hover > .contact__btn-text {
+  color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .contact__btn:hover > .contact__btn-text::before {
+  background-color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .contact__btn:focus > .contact__btn-text {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .contact__btn:focus > .contact__btn-text::before {
+  background-color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .contact__btn:active > .contact__btn-text {
+  color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .contact__btn:active > .contact__btn-text::before {
+  background-color: #bc3f3f;
+}
+.body:has(.body-theme__input:checked) .contact__btn-text {
+  color: #f1897b;
+}
+.body:has(.body-theme__input:checked) .contact__btn-text::before {
+  background-color: #f1897b;
+}
+.body:has(.body-theme__input:checked) .footer__wrapper {
+  border-top: 1px solid #e4e4e4;
+}
+.body:has(.body-theme__input:checked) .footer__text {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .footer__link {
+  color: #262a3f;
+}
+.body:has(.body-theme__input:checked) .footer__link:hover {
+  color: #e64f3a;
+}
+.body:has(.body-theme__input:checked) .footer__link:focus {
+  color: #85bbb1;
+}
+.body:has(.body-theme__input:checked) .footer__link:active {
+  color: #bc3f3f;
 }/*# sourceMappingURL=style.css.map */
