--- a/Pricing/assets/css/style.css
+++ b/Pricing/assets/css/style.css
@@ -1064,4 +1064,4 @@ html {
   left: -0.3rem;
   transform: rotateZ(45deg);
   background-color: #3b4040;
-}/*# sourceMappingURL=style.css.map */
+}
