--- a/Pricing/assets/css/_content.scss
+++ b/Pricing/assets/css/_content.scss
@@ -6,12 +6,20 @@
 	}
 
 	&__wrapper {
+		display: -webkit-box;
+		display: -ms-flexbox;
 		display: flex;
-		justify-content: center;
+		-webkit-box-pack: justify;
+		-ms-flex-pack: justify;
+		justify-content: space-between;
+		-webkit-box-align: center;
+		-ms-flex-align: center;
 		align-items: center;
 
-		gap: 3rem;
+		//gap: 3rem;
 
 		height: 100vh;
+
+		//overflow-x: hidden;
 	}
 }
