--- a/Pricing/assets/css/_mixins.scss
+++ b/Pricing/assets/css/_mixins.scss
@@ -15,8 +15,15 @@
 }
 
 @mixin colum-center {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-orient: vertical;
+	-webkit-box-direction: normal;
+	-ms-flex-direction: column;
 	flex-direction: column;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 }
 
@@ -50,9 +57,9 @@
 		font-size: 1.6rem;
 		line-height: 1.6rem;
 		color: $text;
-
-		bottom: 0.5rem;
-		right: -2.5rem;
+		letter-spacing: 0;
+		bottom: 0.6rem;
+		right: -1.1rem;
 	}
 }
 
@@ -86,6 +93,10 @@
 	border-radius: 3rem;
 	background-color: $button;
 
+	-webkit-transition: all 0.5s linear;
+
+	-o-transition: all 0.5s linear;
+
 	transition: all 0.5s linear;
 }
 
@@ -98,8 +109,14 @@
 }
 
 @mixin red {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
 
 	height: 4.8rem;
@@ -116,11 +133,18 @@
 }
 
 @mixin black {
+	display: -webkit-box;
+	display: -ms-flexbox;
 	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
 	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
 	align-items: center;
+	padding: 0.55rem 0;
 
-	height: 3rem;
+	//height: 3rem;
 	width: 9.6rem;
 	border-radius: 1.5rem;
 	background-color: $bg-tooltip;
