--- a/Productly__new/assets/css/style.css
+++ b/Productly__new/assets/css/style.css
@@ -783,31 +783,13 @@ textarea {
 
 /* General styles */
 @font-face {
-  font-family: "BebasNeue";
-  src: url("../fonts/BebasNeue-Thin.ttf") format("truetype"), url("../fonts/BebasNeue-Thin.otf") format("opentype");
-  font-weight: 100;
-}
-@font-face {
-  font-family: "BebasNeue";
-  src: url("../fonts/BebasNeue-Light.ttf") format("truetype"), url("../fonts/BebasNeue-Light.otf") format("opentype");
-  font-weight: 200;
-}
-@font-face {
-  font-family: "BebasNeue";
-  src: url("../fonts/BebasNeue-Book.ttf") format("truetype"), url("../fonts/BebasNeue-Book.otf") format("opentype");
-  font-weight: 300;
-}
-@font-face {
-  font-family: "BebasNeue";
-  src: url("../fonts/BebasNeue-Regular.ttf") format("truetype"), url("../fonts/BebasNeue-Regular.otf") format("opentype");
-  font-weight: 400;
-}
-@font-face {
-  font-family: "BebasNeue";
-  src: url("../fonts/BebasNeue-Bold.ttf") format("truetype"), url("../fonts/BebasNeue-Bold.otf") format("opentype");
+  font-family: "Gotham";
+  src: url("../fonts/Gotham-Bold.otf") format("opentype");
   font-weight: 700;
 }
-/* colors */
+/* menu items */
+/* buttons */
+/* text */
 *,
 ::after,
 ::before {
@@ -819,250 +801,611 @@ html {
 }
 
 /* fonts */
+/* containers */
+/* text */
+/* elements */
 /* Site styles */
-.main {
-  background-color: #9789f9;
-}
-.main__container {
+.header__container {
   margin-inline: auto;
   max-width: 120rem;
 }
-.main__wrapper {
+.header__wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 100vh;
+  padding-top: 1.7rem;
+  padding-bottom: 1.7rem;
+}
+.header__logo-wrapper {
+  display: flex;
+  align-items: center;
+}
+.header__logo {
+  width: 100%;
+}
+.header__navigation, .header__list {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.header__item {
+  list-style: none;
+}
+.header__link {
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 175%;
+  color: #2f281e;
+  transition: all 0.3s linear;
+}
+.header__link:hover {
+  color: #ff9900;
+}
+.header__link:focus {
+  text-decoration: underline;
+}
+.header__link:active {
+  text-shadow: 1px 1px 2px #ff9900;
+}
+.header__button-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+.header__button--rev {
+  display: inline-block;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 125%;
+  border: 0.1rem solid;
+  border-radius: 0.4rem;
+  transition: all 0.3s linear;
+  color: #2f281e;
+  background-color: #ffffff;
+  border-color: #bcd0e5;
+  padding: 1.3rem 2.6rem;
+}
+.header__button--rev:hover {
+  transform: scale(1.1);
+}
+.header__button--rev:focus {
+  text-decoration: underline;
+}
+.header__button--rev:active {
+  box-shadow: 0 0 1rem #ff9900;
+}
+.header__button--main {
+  display: inline-block;
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 1.6rem;
+  line-height: 125%;
+  border: 0.1rem solid;
+  border-radius: 0.4rem;
+  transition: all 0.3s linear;
+  color: #ffffff;
+  background-color: #ff9900;
+  border-color: #ff9900;
+  padding: 1.3rem 2.25rem;
+}
+.header__button--main:hover {
+  transform: scale(1.1);
+}
+.header__button--main:focus {
+  text-decoration: underline;
+}
+.header__button--main:active {
+  box-shadow: 0 0 1rem #2f281e;
 }
 
-.card {
-  position: relative;
-  background-color: #f5f3f9;
-  max-width: 37rem;
-  width: 100%;
-  box-shadow: 0px 0px 20px #8677ef;
-  transition: all 0.5s linear;
+.first {
+  margin-top: 7rem;
+  margin-bottom: 10rem;
 }
-.card:hover {
-  max-width: 40rem;
+.first__container {
+  margin-inline: auto;
+  max-width: 120rem;
 }
-.card:hover .card__badge {
-  transform: scale(1);
-  opacity: 1;
-}
-.card:hover .card__header {
-  padding-top: 5rem;
-  padding-bottom: 4rem;
-}
-.card:hover .card__main {
-  padding-bottom: 6.7rem;
-}
-.card:hover .card__info {
-  transform: scale(1);
-  opacity: 1;
-  padding-top: 4.7rem;
-}
-.card:hover .card__button {
-  background-color: #fd8d7b;
-  transform: translateY(-11.2rem);
-}
-.card__badge {
-  position: absolute;
-}
-.card__header {
+.first__wrapper {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  gap: 20px;
-  padding-top: 4rem;
-  padding-bottom: 3rem;
-  transition: all 0.5s linear;
 }
-.card__text {
-  position: relative;
-  text-transform: uppercase;
-  font-family: "BebasNeue", sans-serif;
-  font-weight: 100;
-  font-size: 6rem;
-  line-height: 6rem;
-  letter-spacing: 0.08em;
-  color: #000000;
+.first__text-wrapper {
+  max-width: 50rem;
 }
-.card__text::before {
-  position: absolute;
-  content: "$";
-  text-transform: uppercase;
-  font-family: "BebasNeue", sans-serif;
-  font-weight: 100;
-  font-size: 2.4rem;
-  line-height: 2.8rem;
-  color: #181818;
-  top: 0.5rem;
-  left: -1rem;
+.first__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 4.4rem;
+  line-height: 123%;
+  color: #2f281e;
+  margin-bottom: 3rem;
 }
-.card__text::after {
-  position: absolute;
-  content: "/hr";
-  text-transform: uppercase;
-  font-family: "BebasNeue", sans-serif;
-  font-weight: 300;
+.first__text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.8rem;
+  line-height: 156%;
+  color: #544837;
+  margin-bottom: 2rem;
+}
+.first__btn {
+  display: inline-block;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
   font-size: 1.6rem;
-  line-height: 1.6rem;
-  color: #000000;
-  letter-spacing: 0;
-  bottom: 0.6rem;
-  right: -1.1rem;
+  line-height: 150%;
+  color: #ffffff;
+  background-color: #ff9900;
+  padding: 1.3rem 4rem;
+  border: 0.1rem solid #ff9900;
+  border-radius: 0.4rem;
+  transition: all 0.3s linear;
 }
-.card__title {
-  font-family: "BebasNeue", sans-serif;
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 2.4rem;
-  line-height: 2.8rem;
-  letter-spacing: 0.04em;
-  color: #000000;
+.first__btn:hover {
+  transform: scale(1.1);
 }
-.card__main {
-  background-image: url(../img/bg-image.png);
-  background-position: center top;
-  background-repeat: no-repeat;
-  padding-top: 4rem;
-  padding-bottom: 6rem;
+.first__btn:focus {
+  text-decoration: underline;
+}
+.first__btn:active {
+  box-shadow: 0 0 1rem #2f281e;
+}
+.first__img-wrapper {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 4rem;
-  transition: all 0.5s linear;
 }
-.card__icon-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 3rem;
-  height: 3rem;
-}
-.card__icon {
+.first__img {
   width: 100%;
   height: 100%;
 }
-.card__icon-link {
-  fill: #181818;
+
+.features {
+  margin-top: 7rem;
+  margin-bottom: 10rem;
+  background-image: url(../img/bg.png);
+  background-position: center bottom;
+  background-repeat: no-repeat;
+  background-size: 100%;
+  padding-bottom: 7.8rem;
 }
-.card__list {
+.features__container {
+  margin-inline: auto;
+  max-width: 120rem;
+}
+.features__wrapper {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.features__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 3.6rem;
+  line-height: 123%;
+  color: #2f281e;
+  text-align: center;
+  max-width: 54rem;
+  margin-bottom: 5rem;
+}
+.features__content-wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 4.5rem;
+  margin-bottom: 7rem;
+}
+.features__btn {
+  display: inline-block;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 150%;
+  color: #ffffff;
+  background-color: #ff9900;
+  padding: 1.3rem 4rem;
+  border: 0.1rem solid #ff9900;
+  border-radius: 0.4rem;
+  transition: all 0.3s linear;
+}
+.features__btn:hover {
+  transform: scale(1.1);
+}
+.features__btn:focus {
+  text-decoration: underline;
+}
+.features__btn:active {
+  box-shadow: 0 0 1rem #2f281e;
+}
+
+.card {
   display: flex;
   flex-direction: column;
   gap: 3rem;
 }
-.card__item {
-  text-align: left;
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-size: 1.6rem;
-  line-height: 2rem;
-  letter-spacing: 0.04em;
-  color: #000000;
+.card__icon-wrapper {
+  width: 5rem;
+  height: 5rem;
 }
-.card__footer {
+.card__svg {
+  width: 100%;
+  height: 100%;
+}
+.card__text-wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  position: relative;
+  gap: 1.6rem;
 }
-.card__info {
-  font-family: "Roboto", sans-serif;
-  font-weight: 300;
-  font-size: 1.1rem;
-  line-height: 1.8rem;
-  letter-spacing: 0.04em;
-  color: #a9a9a9;
-  transition: all 0.5s linear;
-  transform: scale(0);
-  opacity: 0;
-  padding-top: 0.9rem;
-  padding-bottom: 3rem;
+.card__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 600;
+  font-size: 2.2rem;
+  line-height: 123%;
+  color: #2f281e;
 }
-.card__button {
-  position: absolute;
-  font-family: "BebasNeue", sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-size: 1.8rem;
-  line-height: 1.8rem;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  padding: 2rem 5rem;
-  border-radius: 3rem;
-  background-color: #6fcffb;
-  transition: all 0.5s linear;
-  bottom: -50%;
+.card__text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 162%;
+  color: #544837;
 }
-.card__badge {
-  z-index: 10;
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
+
+.benefits {
+  margin-top: 7rem;
+  margin-bottom: 10rem;
+}
+.benefits__container {
+  margin-inline: auto;
+  max-width: 120rem;
+}
+.benefits__wrapper {
   display: flex;
-  transition: all 0.5s linear;
-  transform-origin: left;
-  transform: scale(0);
-  opacity: 0;
-}
-.card__badge-red {
-  display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  height: 4.8rem;
-  width: 4.8rem;
-  border-radius: 50%;
-  background-color: #fd8d7b;
-  font-family: "BebasNeue", sans-serif;
-  font-weight: 300;
-  text-transform: uppercase;
-  font-size: 2.4rem;
-  line-height: 2.4rem;
-  letter-spacing: unset;
-  color: #ffffff;
 }
-.card__badge-wrapper {
-  width: 2rem;
-  height: 1.7rem;
-  margin-top: -0.6rem;
+.benefits__text-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  max-width: 52.5rem;
 }
-.card__badge-icon {
+.benefits__title-wrapper {
+  max-width: 44rem;
+}
+.benefits__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 3.6rem;
+  line-height: 123%;
+  color: #2f281e;
+  margin-bottom: 2rem;
+}
+.benefits__text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 162%;
+  color: #544837;
+}
+.benefits__article-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.benefits__article {
+  display: flex;
+  flex-direction: column;
+}
+.benefits__subtitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 162%;
+  color: #2f281e;
+  margin-bottom: 1rem;
+}
+.benefits__img-wrapper {
+  display: flex;
+  align-items: center;
+}
+.benefits__img {
+  width: 100%;
+  height: 100%;
+}
+
+.product {
+  margin-top: 7rem;
+  margin-bottom: 10rem;
+}
+.product__container {
+  margin-inline: auto;
+  max-width: 120rem;
+}
+.product__wrapper {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+.product__text-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  max-width: 50.5rem;
+}
+.product__title-wrapper {
+  max-width: 44rem;
+}
+.product__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 3.6rem;
+  line-height: 123%;
+  color: #2f281e;
+  margin-bottom: 2rem;
+}
+.product__text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 162%;
+  color: #544837;
+}
+.product__list {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.product__item-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 3rem;
+}
+.product__item {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 1.6rem;
+  line-height: 162%;
+  color: #544837;
+}
+.product__item-icon {
+  display: inline-block;
+  min-height: 3.5rem;
+  min-width: 3.5rem;
+  height: 3.5rem;
+  width: 3.5rem;
+}
+.product__item-svg {
   height: 100%;
   width: 100%;
+}
+.product__img-wrapper {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
-.card__badge-black {
-  position: relative;
+.product__img {
+  width: 100%;
+  height: 100%;
+}
+
+.marketers {
+  margin-top: 7rem;
+  margin-bottom: 10rem;
+}
+.marketers__container {
+  margin-inline: auto;
+  max-width: 120rem;
+}
+.marketers__wrapper {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  padding: 0.55rem 0;
-  width: 9.6rem;
-  border-radius: 1.5rem;
-  background-color: #3b4040;
-  font-family: "BebasNeue", sans-serif;
-  font-weight: 400;
-  text-transform: uppercase;
+}
+.marketers__text-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 4rem;
+  max-width: 48.6rem;
+}
+.marketers__title-wrapper {
+  max-width: 48.6rem;
+}
+.marketers__title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 3.6rem;
+  line-height: 123%;
+  color: #2f281e;
+  margin-bottom: 2rem;
+}
+.marketers__text {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
   font-size: 1.6rem;
-  line-height: 1.9rem;
-  letter-spacing: 0.04em;
-  color: #ffffff;
-  -ms-grid-row-align: center;
-  align-self: center;
-  margin-left: -1.2rem;
-  box-shadow: 0px 0px 20px #8677ef;
+  line-height: 162%;
+  color: #544837;
 }
-.card__badge-black::before {
-  position: absolute;
-  content: "";
+.marketers__article-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.marketers__article {
+  display: flex;
+  flex-direction: column;
+}
+.marketers__subtitle {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 162%;
+  color: #2f281e;
+  margin-bottom: 1rem;
+}
+.marketers__img-wrapper {
+  display: flex;
+  align-items: center;
+}
+.marketers__img {
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  border-top: 0.1rem solid rgba(188, 208, 229, 0.496913);
+  padding-top: 7rem;
+  padding-bottom: 7rem;
+}
+.footer__container {
+  margin-inline: auto;
+  max-width: 120rem;
+}
+.footer__wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+.footer__logo-wrapper {
+  display: flex;
+}
+.footer__logo {
+  width: 100%;
+}
+.footer__form {
+  display: flex;
+  flex-direction: column;
+  gap: 2.5rem;
+  width: 34rem;
+}
+.footer__form-title {
+  font-family: "Gotham", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 150%;
+  color: #2f281e;
+  max-width: 28rem;
+}
+.footer__input {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 125%;
+  color: #544837;
+  width: 100%;
+  padding: 1.5rem 1rem;
+  border: 0.1rem solid #bcd0e5;
+  border-radius: 4px;
+  transition: all 0.3s linear;
+}
+.footer__input:focus {
+  border-color: #ff9900;
+}
+.footer__input::-moz-placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 125%;
+  color: #bcd0e5;
+}
+.footer__input:-ms-input-placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 125%;
+  color: #bcd0e5;
+}
+.footer__input::placeholder {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 125%;
+  color: #bcd0e5;
+}
+.footer__input:focus:invalid {
+  border-color: #bb3030;
+}
+.footer__btn {
   display: inline-block;
-  height: 1rem;
-  width: 1rem;
-  left: -0.3rem;
-  transform: rotateZ(45deg);
-  background-color: #3b4040;
+  text-decoration: none;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 1.6rem;
+  line-height: 150%;
+  color: #ffffff;
+  background-color: #ff9900;
+  padding: 1.3rem 4rem;
+  border: 0.1rem solid #ff9900;
+  border-radius: 0.4rem;
+  transition: all 0.3s linear;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+}
+.footer__btn:hover {
+  transform: scale(1.1);
+}
+.footer__btn:focus {
+  text-decoration: underline;
+}
+.footer__btn:active {
+  box-shadow: 0 0 1rem #2f281e;
+}
+
+.quick-links,
+.legal-stuff {
+  display: flex;
+  flex-direction: column;
+  gap: 3rem;
+}
+.quick-links__title,
+.legal-stuff__title {
+  font-family: "Gotham", sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 150%;
+  color: #2f281e;
+}
+.quick-links__list,
+.legal-stuff__list {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+}
+.quick-links__item,
+.legal-stuff__item {
+  list-style: none;
+}
+.quick-links__link,
+.legal-stuff__link {
+  text-decoration: none;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 175%;
+  color: #2f281e;
+  transition: all 0.3s linear;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  line-height: 162%;
+  color: #544837;
+}
+.quick-links__link:hover,
+.legal-stuff__link:hover {
+  color: #ff9900;
+}
+.quick-links__link:focus,
+.legal-stuff__link:focus {
+  text-decoration: underline;
+}
+.quick-links__link:active,
+.legal-stuff__link:active {
+  text-shadow: 1px 1px 2px #ff9900;
 }/*# sourceMappingURL=style.css.map */
