--- a/assets/css/_srtucture.scss
+++ b/assets/css/_srtucture.scss
@@ -3,6 +3,7 @@ html {
 }
 
 .body {
+	background-color: $gray;
 	position: relative;
 	height: 100%;
 }
@@ -10,13 +11,15 @@ html {
 .header {
 	position: absolute;
 	top: 2rem;
-	left: 2rem;
-	right: 2rem;
+	width: 100%;
+	border-top: 0.5rem solid $yellow;
+	border-bottom: 0.5rem solid $yellow;
+	background-color: $white;
 
 	&__container {
-		background-color: $yellow;
-		border-radius: 2rem;
-		padding: 2rem;
+		@include container;
+
+		padding: 2rem 0;
 	}
 
 	&__wrapper {
@@ -24,9 +27,29 @@ html {
 		justify-content: space-between;
 	}
 
-	&__subtitle {
+	&__title {
 		@include title;
 		color: $black;
+	}
+}
+
+.footer {
+	position: absolute;
+	bottom: 2rem;
+	width: 100%;
+	border-top: 0.5rem solid $yellow;
+	border-bottom: 0.5rem solid $yellow;
+	background-color: $white;
+
+	&__container {
+		@include container;
+
+		padding: 2rem 0;
+	}
+
+	&__wrapper {
+		display: flex;
+		justify-content: space-between;
 	}
 
 	&__title {
@@ -39,6 +62,7 @@ html {
 	height: 100%;
 
 	&__container {
+		@include container;
 		height: 100%;
 	}
 
@@ -48,37 +72,33 @@ html {
 	}
 
 	&__content {
-		background-color: $black;
 		width: 100%;
 		height: 100%;
-		padding: 11.5rem 1rem 0 2rem;
 	}
 }
 
 .navigation {
-	padding: 11.5rem 2rem 0 1rem;
+	max-width: 60rem;
 	width: 100%;
 	height: 100%;
-	background-color: $black;
 
 	&__container {
-		background-color: $red;
-
-		border-top-left-radius: 2rem;
-		border-top-right-radius: 2rem;
-
+		background-color: $black;
+		padding-top: 11.5rem;
+		padding-inline: 4rem;
 		width: 100%;
 		height: 100%;
 	}
 
 	&__wrapper {
 		display: flex;
+		gap: 4rem;
 	}
 
 	&__title {
-		padding-top: 2rem;
+		margin-top: 2rem;
 		@include main-title;
-		color: $white;
+		color: $red;
 		text-align: center;
 	}
 }
