--- a/assets/css/_content.scss
+++ b/assets/css/_content.scss
@@ -1,5 +1,5 @@
 .menu {
-	//max-width: 50%;
+	min-width: fit-content;
 	width: 100%;
 
 	&__title {
@@ -43,7 +43,7 @@
 	&__wrapper {
 		width: 100%;
 		height: 100%;
-
+		padding-top: 11.5rem;
 		display: flex;
 		align-items: center;
 	}
