--- a/assets/css/_srtucture.scss
+++ b/assets/css/_srtucture.scss
@@ -15,6 +15,7 @@ html {
 	border-top: 0.5rem solid $yellow;
 	border-bottom: 0.5rem solid $yellow;
 	background-color: $white;
+	z-index: 5;
 
 	&__container {
 		@include container;
@@ -78,7 +79,7 @@ html {
 }
 
 .navigation {
-	max-width: 60rem;
+	min-width: fit-content;
 	width: 100%;
 	height: 100%;
 
@@ -96,7 +97,6 @@ html {
 	}
 
 	&__title {
-		margin-top: 2rem;
 		@include main-title;
 		color: $red;
 		text-align: center;
