--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -810,6 +810,7 @@ html {
   border-top: 0.5rem solid #f5ab35;
   border-bottom: 0.5rem solid #f5ab35;
   background-color: #f2f5f0;
+  z-index: 5;
 }
 .header__container {
   margin-inline: auto;
@@ -871,7 +872,9 @@ html {
 }
 
 .navigation {
-  max-width: 60rem;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
   width: 100%;
   height: 100%;
 }
@@ -887,7 +890,6 @@ html {
   gap: 4rem;
 }
 .navigation__title {
-  margin-top: 2rem;
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 3.2rem;
@@ -897,6 +899,9 @@ html {
 }
 
 .menu {
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
   width: 100%;
 }
 .menu__title {
@@ -941,6 +946,7 @@ html {
 .content__wrapper {
   width: 100%;
   height: 100%;
+  padding-top: 11.5rem;
   display: flex;
   align-items: center;
 }
